[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "fs"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde_json = "1"
dotenvy = "0.15.7"
tower-http = { version = "0.6.1", features = ["cors"] }
